@@ -24,7 +24,7 @@
 package org.openjdk.bench.java.lang.foreign;
 
 import java.lang.foreign.*;
-import java.lang.foreign.SegmentScope;
+import java.lang.foreign.Arena;
 import java.lang.invoke.VarHandle;
 import org.openjdk.jmh.annotations.*;
 import org.openjdk.jmh.runner.Runner;
@@ -67,8 +67,10 @@ public class UnrolledAccess extends JavaLayouts {
             this.outputArray = new double[SIZE];
             this.inputAddress = U.allocateMemory(8 * SIZE);
             this.outputAddress = U.allocateMemory(8 * SIZE);
-            this.inputSegment = MemorySegment.ofAddress(inputAddress, 8*SIZE, SegmentScope.global());
-            this.outputSegment = MemorySegment.ofAddress(outputAddress, 8*SIZE, SegmentScope.global());
+            this.inputSegment = MemorySegment.ofAddress(inputAddress)
+                    .reinterpret(8*SIZE);
+            this.outputSegment = MemorySegment.ofAddress(outputAddress)
+                    .reinterpret(8*SIZE);
         }
     }
 
